--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -103,6 +103,7 @@ button {
   cursor: pointer;
   transition: filter 0.2s linear;
   min-width: 10rem;
+  min-height: 52px;
   border: none !important;
 }
 
@@ -157,6 +158,9 @@ main {
     display: flex;
     flex-direction: row;
     align-items: center;
+  }
+  button {
+    min-height: 0px;
   }
 }
 
